--- a/includes/top-nav.html
+++ b/includes/top-nav.html
@@ -2,9 +2,9 @@
     <div class="inner">
         <h3 class="masthead-brand">...</h3>
         <ul class="nav masthead-nav">
-            <li class="active"><a href="#/">Home</a></li>
-            <li><a href="#/about">About</a></li>
-            <li><a href="#/contact">Contact</a></li>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </div>
 </div>
