Simple place holders

--- a/partials/home.html
+++ b/partials/home.html
@@ -1,11 +1,75 @@
-<div class="inner cover">
-    <h1 class="cover-heading">JEM Solutions Ltd</h1>
+<div class="row">
 
-    <p class="lead">
-        Software Engineering and Solutions Development
-    </p>
+    <div class="inner cover">
+        <h1 class="cover-heading">JEM Solutions Ltd</h1>
 
-    <p class="lead">
-        <a href="#" class="btn btn-lg btn-default">Find out more</a>
-    </p>
+        <p class="lead">
+            Software Engineering and Solutions Development.
+        </p>
+
+        <p class="lead">
+            <a href="#" class="btn btn-lg btn-default">Find out more</a>
+        </p>
+
+    </div>
+</div>
+
+<br/>
+<br/>
+
+<div class="row">
+
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Twitter</h3>
+            </div>
+            <div class="panel-body">
+                <img class="img-thumbnail" alt="120x120"
+                     src="http://placehold.it/120x120"
+                     style="width: 120px; height: 120px;">
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">LinkedIn</h3>
+            </div>
+            <div class="panel-body">
+                <img class="img-thumbnail" alt="120x120"
+                     src="http://placehold.it/120x120"
+                     style="width: 120px; height: 120px;">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Git Hub</h3>
+            </div>
+            <div class="panel-body">
+                <img class="img-thumbnail" alt="120x120"
+                     src="http://placehold.it/120x120"
+                     style="width: 120px; height: 120px;">
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Blog</h3>
+            </div>
+            <div class="panel-body">
+                <img data-src="holder.js/120x120" class="img-thumbnail" alt="120x120"
+                     src="http://placehold.it/120x120"
+                     style="width: 120px; height: 120px;">
+            </div>
+        </div>
+    </div>
+
 </div>
