--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,1 +1,35 @@
-Contact
+
+
+<div class="row">
+
+    <form class="form-horizontal" role="form">
+
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
+            <div class="col-sm-6">
+                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="inputName" class="col-sm-3 control-label">Name</label>
+            <div class="col-sm-6">
+                <input type="text" class="form-control" id="inputName" placeholder="Name">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="textAreaDetails" class="col-sm-3 control-label">Details</label>
+            <div class="col-sm-6">
+                <textarea class="form-control" id="textAreaDetails" placeholder="Details"></textarea>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-12">
+                <button type="submit" class="btn btn-default">Send</button>
+            </div>
+        </div>
+    </form>
+
+</div>
