Added image gulp task and links

--- a/includes/top-nav.html
+++ b/includes/top-nav.html
@@ -1,17 +1,10 @@
 <div class="masthead clearfix" ng-controller="NavMenuCtrl as mc">
-    <!--<div class="inner">-->
-        <!--<h3 class="masthead-brand">...</h3>-->
-        <!--<ul class="nav masthead-nav">-->
-            <!--<li class="active"><a href="/">Home</a></li>-->
-            <!--<li class=""><a href="/about">About</a></li>-->
-            <!--<li class=""><a href="/contact">Contact</a></li>-->
-        <!--</ul>-->
-    <!--</div>-->
-
     <div class="inner">
         <h3 class="masthead-brand">{{mc.headText}}</h3>
         <ul class="nav masthead-nav">
-            <li ng-repeat="nav in mc.menuLinks" ng-class="mc.menuClass(nav.link)"> <a href='/{{nav.link}}'>{{nav.text}}</a>
+            <li ng-repeat="nav in mc.menuLinks" ng-class="mc.menuClass(nav.link)">
+                <a href='{{nav.link}}' ng-if="nav.external" target="_blank">{{nav.text}}</a>
+                <a href='/{{nav.link}}' ng-if="!nav.external">{{nav.text}}</a>
             </li>
         </ul>
     </div>
