--- a/partials/home.html
+++ b/partials/home.html
@@ -20,56 +20,27 @@
 <div class="row">
 
     <div class="col-md-3">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Twitter</h3>
-            </div>
-            <div class="panel-body">
-                <img class="img-thumbnail" alt="120x120"
-                     src="http://placehold.it/120x120"
-                     style="width: 120px; height: 120px;">
-            </div>
-        </div>
+        <img class="img-thumbnail" alt="110x110"
+             src="/images/dist/links/octobiwan-110x100.png"
+             style="width: 110px; height: 110px;">
     </div>
 
     <div class="col-md-3">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">LinkedIn</h3>
-            </div>
-            <div class="panel-body">
-                <img class="img-thumbnail" alt="120x120"
-                     src="http://placehold.it/120x120"
-                     style="width: 120px; height: 120px;">
-            </div>
-        </div>
-    </div>
-
-
-    <div class="col-md-3">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Git Hub</h3>
-            </div>
-            <div class="panel-body">
-                <img class="img-thumbnail" alt="120x120"
-                     src="http://placehold.it/120x120"
-                     style="width: 120px; height: 120px;">
-            </div>
-        </div>
+        <img class="img-thumbnail" alt="110x110"
+             src="/images/dist/links/linkedin-110x100.png"
+             style="width: 110px; height: 110px;">
     </div>
 
     <div class="col-md-3">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Blog</h3>
-            </div>
-            <div class="panel-body">
-                <img data-src="holder.js/120x120" class="img-thumbnail" alt="120x120"
-                     src="http://placehold.it/120x120"
-                     style="width: 120px; height: 120px;">
-            </div>
-        </div>
+        <img class="img-thumbnail" alt="110x110"
+             src="/images/dist/links/twitter-110x100.png"
+             style="width: 110px; height: 110px;">
+    </div>
+
+    <div class="col-md-3">
+        <img data-src="holder.js/110x110" class="img-thumbnail" alt="110x110"
+             src="/images/dist/links/blog-110x100.png"
+             style="width: 110px; height: 110px;">
     </div>
 
 </div>
