Adding gulp task and images

--- a/partials/home.html
+++ b/partials/home.html
@@ -19,28 +19,40 @@
 
 <div class="row">
 
-    <div class="col-md-3">
-        <img class="img-thumbnail" alt="110x110"
-             src="/images/dist/links/octobiwan-110x100.png"
-             style="width: 110px; height: 110px;">
+    <div class="col-md-1">
     </div>
 
-    <div class="col-md-3">
-        <img class="img-thumbnail" alt="110x110"
-             src="/images/dist/links/linkedin-110x100.png"
-             style="width: 110px; height: 110px;">
+    <div class="col-md-2">
+        <img class="img-thumbnail" alt="80x80"
+             src="/images/dist/links/octobiwan-80x80.png"
+             style="width: 80px; height: 80px;">
     </div>
 
-    <div class="col-md-3">
-        <img class="img-thumbnail" alt="110x110"
-             src="/images/dist/links/twitter-110x100.png"
-             style="width: 110px; height: 110px;">
+    <div class="col-md-2">
+        <img class="img-thumbnail" alt="80x80"
+             src="/images/dist/links/linkedin-80x80.png"
+             style="width: 80px; height: 80px;">
     </div>
 
-    <div class="col-md-3">
-        <img data-src="holder.js/110x110" class="img-thumbnail" alt="110x110"
-             src="/images/dist/links/blog-110x100.png"
-             style="width: 110px; height: 110px;">
+    <div class="col-md-2">
+        <img class="img-thumbnail" alt="80x80"
+             src="/images/dist/links/twitter-80x80.png"
+             style="width: 80px; height: 80px;">
+    </div>
+
+    <div class="col-md-2">
+        <img data-src="holder.js/80x80" class="img-thumbnail" alt="80x80"
+             src="/images/dist/links/blog-80x80.png"
+             style="width: 80px; height: 80px;">
+    </div>
+
+    <div class="col-md-2">
+        <img class="img-thumbnail" alt="80x80"
+             src="/images/dist/links/instagram-80x80.png"
+             style="width: 80px; height: 80px;">
+    </div>
+
+    <div class="col-md-1">
     </div>
 
 </div>
