Adding the about page

--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -1,1 +1,45 @@
-About
+<div class="row">
+
+    <div class="inner cover about">
+        <p class="lead">
+            A passionate full stack Software Engineer based in <a href="https://instagram.com/jimbobbins" target="_blank">Manchester UK</a>.
+        </p>
+
+        <p>
+            I have been building and designing software for 10 years and have experience in all aspects Software Development from larger
+            traditional organisation following a waterfall approach to having lots of experience in both Kanban and Scrum agile methodologies.
+        </p>
+
+        <p>
+            Originally coming from a background in Java/J2EE building enterprise message driven applications using technologies such as JMS, Apache
+            Camel, Spring and MySQL.
+        </p>
+
+        <p>
+            In recent years spending lots of time architecting and building modern JavaScript Web and Micro Service based applications in NodeJS,
+            AngularJS and MongoDB utilising tool kits such as StompJS, ui-router, Bootstrap, Lodash and Gulp amongst many more.
+        </p>
+
+        <p>
+            Approximately 2 years ago I became self employed and have become skilled in things such as Scala, Akka, Kafka and Neo4J along with various
+            other technologies. Leading small focus teams and providing expertise in required fields as well as designing and building reactive high
+            though put systems using Akka and more recently Akka-Streams.
+        </p>
+
+        <p>
+            To view some of my more recent work please head over to my <a href="http://github.com/jamesmorgan" target="_blank">GitHub account</a> or
+            take a look at my <a href="https://www.linkedin.com/in/jamesemorgan" target="_blank">LinkedIn profile</a> for examples of the companies
+            and project I have been working on.
+        </p>
+
+        <p>
+            If you would like get in touch please <a href="#/contact">contact me</a> and I will reply as soon as I can.
+        </p>
+
+    </div>
+</div>
+
+<div class="row">
+    <div class="github-card" data-github="jamesmorgan" data-width="400" data-height="" data-theme="default"></div>
+    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+</div>
