--- a/app/views/includes/links-menu.html
+++ b/app/views/includes/links-menu.html
@@ -4,33 +4,33 @@
     </div>
 
     <div class="col-md-2">
-        <img class="img-thumbnail" alt="80x80"
-             src="build/images/links/dest/octobiwan-80x80.png"
-             style="width: 80px; height: 80px;">
+        <a href="http://github.com/jamesmorgan" target="_blank">
+            <img class="img-thumbnail" src="build/images/links/dest/octobiwan-80x80.png" style="height: 80px; width: 80px;">
+        </a>
     </div>
 
     <div class="col-md-2">
-        <img class="img-thumbnail" alt="80x80"
-             src="build/images/links/dest/linkedin-80x80.png"
-             style="width: 80px; height: 80px;">
+        <a href="https://www.linkedin.com/in/jamesemorgan" target="_blank">
+            <img class="img-thumbnail" src="build/images/links/dest/linkedin-80x80.png" style="height: 80px; width: 80px;">
+        </a>
     </div>
 
     <div class="col-md-2">
-        <img class="img-thumbnail" alt="80x80"
-             src="build/images/links/dest/twitter-80x80.png"
-             style="width: 80px; height: 80px;">
+        <a href="http://twitter.com/jimbob_87" target="_blank">
+            <img class="img-thumbnail" src="build/images/links/dest/twitter-80x80.png" style="height: 80px; width: 80px;">
+        </a>
     </div>
 
     <div class="col-md-2">
-        <img data-src="holder.js/80x80" class="img-thumbnail" alt="80x80"
-             src="build/images/links/dest/blog-80x80.png"
-             style="width: 80px; height: 80px;">
+        <a href="http://www.morgan-design.com" target="_blank">
+            <img class="img-thumbnail" src="build/images/links/dest/blog-80x80.png" style="height: 80px; width: 80px;">
+        </a>
     </div>
 
     <div class="col-md-2">
-        <img class="img-thumbnail" alt="80x80"
-             src="build/images/links/dest/instagram-80x80.png"
-             style="width: 80px; height: 80px;">
+        <a href="https://instagram.com/jimbobbins" target="_blank">
+            <img class="img-thumbnail" src="build/images/links/dest/instagram-80x80.png" style="height: 80px; width: 80px;">
+        </a>
     </div>
 
     <div class="col-md-1">
