--- a/app/views/partials/home.html
+++ b/app/views/partials/home.html
@@ -8,7 +8,7 @@
         </p>
 
         <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">Find out more</a>
+            <a href="#/about" class="btn btn-lg btn-default">Find out more</a>
         </p>
 
     </div>
