--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -6,8 +6,8 @@
         </p>
 
         <p>
-            I have been building and designing software for 10 years and have experience in all aspects Software Development from larger
-            traditional organisation following a waterfall approach to having lots of experience in both Kanban and Scrum agile methodologies.
+            I have been building and designing software for 10 years and have experience in all aspects of Software Development from larger
+            traditional organisations following a waterfall approach to having great experience in both Kanban and Scrum agile methodologies.
         </p>
 
         <p>
