--- a/app/views/partials/contact.html
+++ b/app/views/partials/contact.html
@@ -1,34 +1,82 @@
 <div class="row">
 
-    <form class="form-horizontal" role="form">
+    <form class="form-horizontal" role="form" name="contactForm">
 
         <div class="form-group">
-            <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
+            <label for="name" class="col-sm-3 control-label">Name</label>
 
             <div class="col-sm-6">
-                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <input type="text" class="form-control"
+                       id="name" name="name" placeholder="Name"
+                       ng-model="contact.form.name" ng-minlength="5" ng-maxlength="250" required>
+            </div>
+
+            <div class="col-sm-9" ng-messages="contactForm.name.$error" role="alert">
+                <div ng-message="required">
+                    <p class="text-danger">You did not enter a field</p>
+                </div>
+                <div ng-message="minlength">
+                    <p class="text-danger">Your field is too short</p>
+                </div>
+                <div ng-message="maxlength">
+                    <p class="text-danger">Your field is too long</p>
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="inputName" class="col-sm-3 control-label">Name</label>
+            <label for="email" class="col-sm-3 control-label">Email</label>
 
             <div class="col-sm-6">
-                <input type="text" class="form-control" id="inputName" placeholder="Name">
+                <input type="email" class="form-control"
+                       id="email" name="email" placeholder="Email"
+                       ng-model="contact.form.email" ng-minlength="5" ng-maxlength="250" required>
+            </div>
+
+            <div class="col-sm-9" ng-messages="contactForm.email.$error" role="alert">
+                <div ng-message="required">
+                    <p class="text-danger">You did not enter a field</p>
+                </div>
+                <div ng-message="minlength">
+                    <p class="text-danger">Your field is too short</p>
+                </div>
+                <div ng-message="maxlength">
+                    <p class="text-danger">Your field is too long</p>
+                </div>
+                <div ng-message="email">
+                    <p class="text-danger">Your email address is invalid</p>
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="textAreaDetails" class="col-sm-3 control-label">Details</label>
+            <label for="details" class="col-sm-3 control-label">Details</label>
 
             <div class="col-sm-6">
-                <textarea class="form-control" id="textAreaDetails" placeholder="Details"></textarea>
+                <textarea class="form-control"
+                          id="details" name="details" placeholder="Details"
+                          ng-model="contact.form.details" ng-minlength="20" ng-maxlength="1500" required>
+                </textarea>
+            </div>
+
+            <div class="col-sm-9" ng-messages="contactForm.details.$error" role="alert">
+                <div ng-message="required">
+                    <p class="text-danger">You did not enter a field</p>
+                </div>
+                <div ng-message="minlength">
+                    <p class="text-danger">Your field is too short</p>
+                </div>
+                <div ng-message="maxlength">
+                    <p class="text-danger">Your field is too long</p>
+                </div>
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-12">
-                <button type="submit" class="btn btn-default">Send</button>
+                <button type="submit" class="btn btn-default"
+                        ng-disabled="contactForm.invalid" ng-click="contact.sendEmail()">Send
+                </button>
             </div>
         </div>
     </form>
