--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -1,6 +1,20 @@
 <div class="mastfoot">
     <div class="inner">
-        <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
-                href="https://twitter.com/mdo">@mdo</a>. - Version <span app-version></span></p>
+
+        <p>
+            Built using <a href="http://gulpjs.com/" target="_blank">Gulp</a>,
+            <a href="http://browserify.org/" target="_blank">Browserify</a>,
+            <a href="https://angularjs.org/" target="_blank">Angular (1.4)</a>,
+            <a href="http://sass-lang.com/" target="_blank">SASS</a> &
+            <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
+        </p>
+
+        <p></p>
+
+        <p>
+            Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
+                href="https://twitter.com/mdo">@mdo</a>. - Version <span app-version></span>
+            - Hosted on <a href="https://github.com/jamesmorgan/jem-solutions" target="_blank">GitHub</a>
+        </p>
     </div>
 </div>
