--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -40,6 +40,6 @@
 </div>
 
 <div class="row">
-    <div class="github-card" data-github="jamesmorgan" data-width="400" data-height="" data-theme="default"></div>
+    <div class="github-card" data-github="jamesmorgan" data-width="400" data-height="150" data-target="blank" data-theme="default"></div>
     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 </div>
