--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -6,7 +6,7 @@
         </p>
 
         <p>
-            I have been building and designing software for 10 years and have experience in all aspects of Software Development from larger
+            I have been building and designing software for nearly 10 years and have experience in all aspects of Software Development from larger
             traditional organisations following a waterfall approach to having great experience in both Kanban and Scrum agile methodologies.
         </p>
 
@@ -40,6 +40,6 @@
 </div>
 
 <div class="row">
-    <div class="github-card" data-github="jamesmorgan" data-width="400" data-height="150" data-target="blank" data-theme="default"></div>
+    <div class="github-card" data-github="jamesmorgan" data-width="350" data-height="150" data-target="blank" data-theme="default"></div>
     <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 </div>
