--- a/app/views/partials/home.html
+++ b/app/views/partials/home.html
@@ -4,7 +4,7 @@
         <h1 class="cover-heading">JEM Solutions Ltd</h1>
 
         <p class="lead">
-            Software Engineering and Design & Development.
+            Software Engineering, Design & Development.
         </p>
 
         <p class="lead">
