--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -2,14 +2,13 @@
     <div class="inner">
 
         <p>
-            Built using <a href="http://gulpjs.com/" target="_blank">Gulp</a>,
-            <a href="http://browserify.org/" target="_blank">Browserify</a>,
-            <a href="https://angularjs.org/" target="_blank">Angular (1.4)</a>,
-            <a href="http://sass-lang.com/" target="_blank">SASS</a> &
-            <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
+            Built using <a href="http://gulpjs.com" target="_blank">Gulp</a>,
+            <a href="http://browserify.org" target="_blank">Browserify</a>,
+            <a href="https://angularjs.org" target="_blank">Angular (1.4)</a>,
+            <a href="https://www.firebase.com" target="_blank">Firebase</a>,
+            <a href="http://getbootstrap.com" target="_blank">Bootstrap</a> &
+            <a href="http://sass-lang.com" target="_blank">SASS</a>
         </p>
-
-        <p></p>
 
         <p>
             Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a
