--- a/app/views/partials/about.html
+++ b/app/views/partials/about.html
@@ -23,7 +23,7 @@
         <p>
             Approximately 2 years ago I became self employed and have become skilled in things such as Scala, Akka, Kafka and Neo4J along with various
             other technologies. Leading small focus teams and providing expertise in required fields as well as designing and building reactive high
-            though put systems using Akka and more recently Akka-Streams.
+            throughput systems using Akka and more recently Akka-Streams.
         </p>
 
         <p>
