--- a/app/views/includes/links-menu.html
+++ b/app/views/includes/links-menu.html
@@ -1,55 +1,61 @@
 <div class="row">
 
-    <div class="col-md-1">
-        <p></p>
-    </div>
+    <div class="col-md-12">
 
-    <div class="col-md-2">
-        <p>
-            <a href="http://github.com/jamesmorgan" target="_blank"
-               popover="Code Review (GitHub)" popover-trigger="mouseenter" popover-placement="left" popover-animation="true">
-                <img class="img-thumbnail" src="build/images/links/dest/octobiwan-80x80.png" style="height: 80px; width: 80px;">
-            </a>
-        </p>
-    </div>
+        <div class="col-md-2">
+            <p>
+                <a href="http://github.com/jamesmorgan" target="_blank"
+                   popover="Code Review (GitHub)" popover-trigger="mouseenter" popover-placement="left" popover-animation="true">
+                    <img class="img-thumbnail" src="build/images/links/dest/octobiwan-80x80.png" style="height: 80px; width: 80px;">
+                </a>
+            </p>
+        </div>
 
-    <div class="col-md-2">
-        <p>
-            <a href="https://www.linkedin.com/in/jamesemorgan" target="_blank"
-               popover="Visit my LinkedIn profile" popover-trigger="mouseenter" popover-placement="top" popover-animation="true">
-                <img class="img-thumbnail" src="build/images/links/dest/linkedin-80x80.png" style="height: 80px; width: 80px;">
-            </a>
-        </p>
-    </div>
+        <div class="col-md-2">
+            <p>
+                <a href="https://medium.com/@james.morgan" target="_blank"
+                   popover="medium.com - my latest publications" popover-trigger="mouseenter" popover-placement="top" popover-animation="true">
+                    <img class="img-thumbnail" src="build/images/links/dest/medium-80x80.png" style="height: 80px; width: 80px;">
+                </a>
+            </p>
+        </div>
 
-    <div class="col-md-2">
-        <p>
-            <a href="http://twitter.com/jimbob_87" target="_blank"
-               popover="Tweet Me..." popover-trigger="mouseenter" popover-placement="bottom" popover-animation="top">
-                <img class="img-thumbnail" src="build/images/links/dest/twitter-80x80.png" style="height: 80px; width: 80px;">
-            </a>
-        </p>
-    </div>
+        <div class="col-md-2">
+            <p>
+                <a href="https://www.linkedin.com/in/jamesemorgan" target="_blank"
+                   popover="Visit my LinkedIn profile" popover-trigger="mouseenter" popover-placement="bottom" popover-animation="true">
+                    <img class="img-thumbnail" src="build/images/links/dest/linkedin-80x80.png" style="height: 80px; width: 80px;">
+                </a>
+            </p>
+        </div>
 
-    <div class="col-md-2">
-        <p>
-            <a href="http://www.morgan-design.com" target="_blank"
-               popover="My old blog (needs work..)" popover-trigger="mouseenter" popover-placement="top" popover-animation="true">
-                <img class="img-thumbnail" src="build/images/links/dest/blog-80x80.png" style="height: 80px; width: 80px;">
-            </a>
-        </p>
-    </div>
+        <div class="col-md-2">
+            <p>
+                <a href="http://twitter.com/jimbob_87" target="_blank"
+                   popover="Tweet Me..." popover-trigger="mouseenter" popover-placement="top" popover-animation="top">
+                    <img class="img-thumbnail" src="build/images/links/dest/twitter-80x80.png" style="height: 80px; width: 80px;">
+                </a>
+            </p>
+        </div>
 
-    <div class="col-md-2">
-        <p>
-            <a href="https://instagram.com/jimbobbins" target="_blank"
-               popover="My latest Instagram Snaps" popover-trigger="mouseenter" popover-placement="right" popover-animation="true">
-                <img class="img-thumbnail" src="build/images/links/dest/instagram-80x80.png" style="height: 80px; width: 80px;">
-            </a>
-        </p>
-    </div>
+        <div class="col-md-2">
+            <p>
+                <a href="http://www.morgan-design.com" target="_blank"
+                   popover="My old blog (needs work..)" popover-trigger="mouseenter" popover-placement="left" popover-animation="true">
+                    <img class="img-thumbnail" src="build/images/links/dest/blog-80x80.png" style="height: 80px; width: 80px;">
+                </a>
+            </p>
+        </div>
 
-    <div class="col-md-1">
+        <div class="col-md-2">
+            <p>
+                <a href="https://instagram.com/jimbobbins" target="_blank"
+                   popover="My latest Instagram Snaps" popover-trigger="mouseenter" popover-placement="right" popover-animation="true">
+                    <img class="img-thumbnail" src="build/images/links/dest/instagram-80x80.png" style="height: 80px; width: 80px;">
+                </a>
+            </p>
+        </div>
+
     </div>
 
 </div>
